Set blog list style for front-page.

--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -33,21 +33,27 @@
         }
     }
     &:first-child {
-        .entry-header {
-            display: none;
+        .wrap {
+            > .entry-header {
+                display: none;
+            }
         }
     }
     &:nth-child(2) {
-        .entry-header {
-            &::before {
-                content: "Welcome";
+        .wrap {
+            > .entry-header {
+                &::before {
+                    content: "Welcome";
+                }
             }
         }
     }
     &:nth-child(3) {
-        .entry-header {
-            &::before {
-                content: "Outline";
+        .wrap {
+            > .entry-header {
+                &::before {
+                    content: "Outline";
+                }
             }
         }
         .block-area {
@@ -109,16 +115,36 @@
         }
     }
     &:nth-child(4) {
-        .entry-header {
-            &::before {
-                content: "Blog";
+        .wrap {
+            > .entry-header {
+                &::before {
+                    content: "Blog";
+                }
+            }
+        }
+        .recent-posts {
+            .entry-header {
+                @media screen and (min-width: 48em) {
+                    margin: 0 0 .5em;
+                }
+                .entry-title {
+                    a {
+                        @include text-gradation();
+                        font-weight: bold;
+                        //&:not(:hover) {
+                        //    box-shadow: inset 0 0 0 rgba($color-black, .15), 0 3px 0 rgba($color-black, .15);
+                        //}
+                    }
+                }
             }
         }
     }
     &:nth-child(5) {
-        .entry-header {
-            &::before {
-                content: "Social Media";
+        .wrap {
+            > .entry-header {
+                &::before {
+                    content: "Social Media";
+                }
             }
         }
     }
