--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -85,6 +85,9 @@
                 li {
                     &:first-child {
                         flex: 1;
+                        a {
+                            display: inline-block;
+                        }
                     }
                 }
             }
