--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -86,7 +86,7 @@
             //}
         }
         address {
-            margin: -1em 0 .5rem;
+            margin: .5em 0 .5rem;
             font-size: .8rem;
         }
         iframe {
@@ -114,9 +114,9 @@
                     a {
                         @include text-gradation();
                         font-weight: bold;
-                        //&:not(:hover) {
-                        //    box-shadow: inset 0 0 0 rgba($color-black, .15), 0 3px 0 rgba($color-black, .15);
-                        //}
+                        &:not(:hover) {
+                            box-shadow: none;
+                        }
                     }
                 }
             }
