--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -121,10 +121,13 @@
                     }
                     ul {
                         border: none;
-                        background-color: rgba($color-green, .1);
+                        background-color: rgba($color-green, .7);
                         li {
+                            a {
+                                color: $color-white;
+                            }
                             &:hover {
-                                background-color: rgba($color-green, .5);
+                                background-color: rgba($color-green, .7);
                             }
                         }
                     }
