--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -12,6 +12,10 @@
         @media screen and (min-width: 48em) {
             padding-bottom: 0;
             background-color: $color-white;
+            .wrap {
+                max-width: 100vw;
+                padding: 0 1.5em;
+            }
         }
         &:before {
             content: "";
@@ -47,6 +51,10 @@
         padding-top: 0;
     }
     a {
+        font-size: .8rem;
+        @media screen and (min-width: 48em) {
+            font-size: 1rem;
+        }
         &:hover {
             color: initial;
         }
@@ -57,7 +65,8 @@
         }
     }
     &.toggled-on {
-        background-color: $color-white;
+        height: 100vh;
+        background-color: rgba($color-white, 1);
     }
 }
 
@@ -90,24 +99,45 @@
     }
 }
 
-@media screen and (min-width: 48em) {
-    .navigation-top {
-        .wrap {
-            max-width: 100vw;
-            padding: 0 1.5em;
-        }
-    }
-    .js {
-        .main-navigation {
-            ul.menu {
+.js {
+    .main-navigation {
+        ul.menu {
+            background-color: transparent;
+            @media screen and (min-width: 48em) {
                 display: flex;
                 justify-content: flex-end;
                 li {
                     padding: .75em 0;
+                }
+                > li {
                     &:first-child {
                         flex: 1;
                         a {
+                            position: relative;
+                            content: "";
                             display: inline-block;
+                            width: 80px;
+                            height: 48px;
+                            overflow: hidden;
+                            //background-repeat: no-repeat;
+                            //background-size: contain;
+                            //text-indent: -1000%;
+                            //transition: .3s;
+                            &:after {
+                                position: absolute;
+                                top: 0;
+                                left: .5em;
+                                width: 48px;
+                                height: 48px;
+                                line-height: 48px;
+                                display: block;
+                                background: $color-white;
+                                color: rgba($color-green, .5);
+                                font-size: 36px;
+                                content: "\f102";
+                                font-family: dashicons;
+                                text-indent: 0;
+                            }
                         }
                     }
                     &:not(:first-child):not(.navi-ticket){
