--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -16,6 +16,9 @@
                 max-width: 100vw;
                 padding: 0 1.5em;
             }
+            nav {
+                margin-left: 0;
+            }
         }
         &:before {
             content: "";
@@ -116,9 +119,11 @@
                             position: relative;
                             content: "";
                             display: inline-block;
-                            width: 80px;
+                            width: 48px;
                             height: 48px;
                             overflow: hidden;
+                            padding-left: 0;
+                            padding-right: 0;
                             //background-repeat: no-repeat;
                             //background-size: contain;
                             //text-indent: -1000%;
@@ -126,10 +131,10 @@
                             &:after {
                                 position: absolute;
                                 top: 0;
-                                left: .5em;
+                                left: 0;
                                 width: 48px;
                                 height: 48px;
-                                line-height: 48px;
+                                line-height: 52px;
                                 display: block;
                                 background: $color-white;
                                 color: rgba($color-green, .5);
