--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -156,13 +156,13 @@
                     }
                     ul {
                         border: none;
-                        background-color: rgba($color-green, .7);
+                        background-color: rgba($color-green, .8);
                         li {
                             a {
                                 color: $color-white;
                             }
                             &:hover {
-                                background-color: rgba($color-green, .7);
+                                background-color: rgba($color-green, 1);
                             }
                         }
                     }
