--- a/scss/global/_header.scss
+++ b/scss/global/_header.scss
@@ -90,7 +90,7 @@
                 padding: 1em 1.25em;
                 a {
                     display: block;
-                    background-image: url('../docs/images/layout/logo-front.svg');
+                    background-image: url('https://wcosaka2018.github.io/wcosaka2018-theme/images/layout/logo-front.svg');
                     background-size: contain;
                     background-repeat: no-repeat;
                     background-position: top left;
