--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -140,7 +140,7 @@
                                 //content: "\f102";
                                 //font-family: dashicons;
                                 text-indent: 0;
-                                background: url("https://wcosaka2018.github.io/wcosaka2018-theme/images/layout/logo-main.svg");
+                                background-image: url("https://wcosaka2018.github.io/wcosaka2018-theme/images/layout/logo-main.svg");
                                 background-repeat: no-repeat;
                                 background-size: contain;
                                 opacity: .15;
