--- a/scss/project/_page.scss
+++ b/scss/project/_page.scss
@@ -1,5 +1,5 @@
 @mixin headerStyle() {
-    background-image: url("https://wcosaka2018.github.io/wcosaka2018-theme/images/wapuu/wapuu_bg.svg");
+    background-image: url("https://wcosaka2018.github.io/wcosaka2018-theme/images/wapuu/maido-wapuu-line.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
