--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -6,7 +6,10 @@
     }
     .wrap {
         position: relative;
-        padding: 7em 1.5em 4em;
+        padding: calc(4em + 20px) 1.5em 4em;
+        @media screen and (min-width: 48em) {
+            padding: calc(5em + 70px) 1.5em 4em;
+        }
         > .entry-header {
             position: relative;
             text-align: center;
