--- a/scss/project/_ticket.scss
+++ b/scss/project/_ticket.scss
@@ -61,6 +61,7 @@
 				display: block;
 				position: relative;
 				font-size: 1rem;
+				line-height: 1.4;
 				@media screen and (min-width: 48em) {
         	border-top: none;
 					width: 62%;
@@ -81,7 +82,6 @@
 				.tix-ticket-excerpt{
 					font-size: 0.75rem;
 					color: #666666;
-					line-height: 1.2!important;
 				}
 			}
 			
@@ -136,6 +136,7 @@
 					width: 50px;
 					height: 38px;
 					background: rgba(52, 175, 165, 0.1);
+					text-align: center;
 				}
 			}
 			
